# rulia

./: .gitignore  LICENSE_COMMERCIAL_TEMPLATE.txt  NOTICE  README.md
engine/rulia/: Cargo.toml
engine/rulia-arrow/: Cargo.toml
engine/rulia-arrow/src/: lib.rs
engine/rulia-cli/: Cargo.toml
engine/rulia-cli/src/: main.rs  tools_install.rs
engine/rulia-cli/tests/: cli.rs  portable_workflow_cli.rs  tools_install.rs
engine/rulia-cli/tests/fixtures/: canonical.rjl  ci_gate_expected_run_vectors_ci_v0.json  noncanonical.rjl  run_vectors_l2_artifact_pipeline_expected.json  vectorset_v0_ci_all_pass.json  vectorset_v0_invalid_multi.yaml  vectorset_v0_run_vectors_l1_validate.json  vectorset_v0_run_vectors_l2_artifact_pipeline.json  vectorset_v0_run_vectors_l2_artifact_pipeline_join_obligations.json  vectorset_v0_run_vectors_l2_evalir_join_obligations.json  vectorset_v0_run_vectors_l2_evalir_plan.json  vectorset_v0_run_vectors_l2_evalir_rules_branching.json  vectorset_v0_run_vectors_l2_evalir_rules_sexpr_branching.json  vectorset_v0_run_vectors_l3_proof.json  vectorset_v0_run_vectors_l4_capability.json  vectorset_v0_run_vectors_m0_golden.json  vectorset_v0_valid_minimal.json
engine/rulia-cli/tests/fixtures/l2_evalir_v0/: evalir_assign_emit_end.json  evalir_choose_rules_branch.json  evalir_choose_rules_branch_sexpr.json  evalir_from_artifact_choose_rules_branch.json  evalir_from_artifact_expression_assign_request_suspend.json  evalir_from_artifact_join_wait_for_request.json  evalir_join_all_of_missing.json  evalir_join_all_of_satisfied.json  evalir_join_any_of_satisfied.json  evalir_request_suspend.json  gamma_core_main.json  history_prefix_empty.json  history_prefix_join_one_receipt.json  history_prefix_join_two_receipts.json  initial_state_base.json  initial_state_with_amount_high.json  initial_state_with_amount_low.json
engine/rulia-cli/tests/fixtures/l3_proof_v0/trust/trusted/: key:test-signer-1.pub
engine/rulia-cli/tests/fixtures/l3_proof_v0/trust/untrusted/: key:test-signer-2.pub
engine/rulia-cli/tests/fixtures/rules_sexpr_v0/: allowlist_routing_wait_docs.sx  risk_routing_open_case.sx  unbound_var_failure.sx
engine/rulia-cli/tests/fixtures/workflow_artifact_v0_subset/: artifact_assign_emit_end.rjl  artifact_choose_rules_branch.rjl  artifact_expression_assign_request_suspend.rjl  artifact_expression_branch_if_end.rjl  artifact_join_wait_for_request.rjl  artifact_request_suspend.rjl
engine/rulia-cli/tests/fixtures/workflow_artifact_v0_subset/import_recursive_expression/: leaf.rjl  main.rjl
engine/rulia-cli/tests/fixtures/workflow_artifact_v0_subset/import_recursive_expression/workflow/: root.rjl
engine/rulia-ffi/: Cargo.toml
engine/rulia-ffi/src/: lib.rs
engine/rulia-ffi/tests/: ffi_conformance.rs  ffi_format_and_framing.rs  ffi_frozen_verb_parity.rs  ffi_portable_workflow_eval_evalir.rs  ffi_portable_workflow_eval_rules.rs  ffi_portable_workflow_hashing.rs  ffi_portable_workflow_match_cap.rs  ffi_portable_workflow_meta_roundtrip.rs  ffi_portable_workflow_stubs.rs  ffi_portable_workflow_verifier.rs
engine/rulia-fmt/: Cargo.toml
engine/rulia-fmt/src/: ast.rs  error.rs  format.rs  lib.rs  main.rs  parse.rs
engine/rulia-fmt/tests/: format.rs
engine/rulia-lsp/: Cargo.toml
engine/rulia-lsp/src/: main.rs
engine/rulia-wasm/: Cargo.toml  README.md
engine/rulia-wasm/src/: lib.rs
engine/rulia-wasm/tests/: js_view.rs  sdk_surface.rs
engine/rulia/src/: error.rs  hash.rs  imports.rs  kernel_expression.rs  lib.rs  schema.rs  security.rs  serde_support.rs  text.rs  value.rs
engine/rulia/src/binary/: builder.rs  dictionary.rs  header.rs  mod.rs  pointer.rs  reader.rs  value_ref.rs
engine/rulia/tests/: advanced_syntax.rs  binary_digest.rs  binary_typetag_conformance.rs  canonical_format.rs  fact_identity.rs  import_resolver.rs  instant_conformance.rs  interpolation_and_destructuring.rs  map_keys.rs  parse_options.rs  property_canonical_text.rs  property_roundtrip.rs  references_and_namespaces.rs  replay_determinism.rs  roundtrip.rs  schema.rs  security_conventions.rs  text.rs  zero_copy_tripwire.rs
engine/rulia/tests/data/: common.rjl
engine/rulia/tests/formatting/canonical/: canonical_1.expected.rjl  canonical_2.rjl  canonical_import.rjl  canonical_new.expected.rjl
engine/rulia/tests/formatting/invalid/: invalid_syntax.rjl
engine/rulia/tests/formatting/noncanonical/: noncanonical_commas.rjl  noncanonical_import.rjl  noncanonical_new.rjl  noncanonical_order.rjl  noncanonical_whitespace.rjl
examples/: .gitignore  Makefile  README.md  env.example  podman-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: binary_decode.rs  framing_decode.rs  text_parse.rs
include/: rulia_ffi_v1.h
sdk/: README.md
spec/: CHEATSHEET.md  DRAFT_POLICY.md  (+12 more)
(+267 files in other folders)
