[package]
name = "rulia-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rulia command-line interface"

[[bin]]
name = "rulia"
path = "src/main.rs"

[[bin]]
name = "portable-workflow"
path = "src/bin/portable-workflow.rs"

[dependencies]
rulia = { path = "../rulia" }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
ed25519-dalek = "2.1"
flate2 = "1.0"
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2.workspace = true
tar = "0.4"
tempfile = "3"
thiserror.workspace = true
ureq = { version = "2.9", features = ["tls"] }
url = "2.5"
zip = "0.6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
