[package]
name = "rulia-fmt"
version = "0.1.0"
edition = "2021"
license = "EPL-2.0"
repository = "https://github.com/factflow/rulia"
description = "Canonical formatter for Rulia using tree-sitter"
publish = false

[dependencies]
num-bigint = { workspace = true }
tree-sitter = "0.22.6"
tree-sitter-rulia = { path = "../../tools/tree-sitter-rulia" }

[dev-dependencies]
