[package]
name = "rulia-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rulia-fmt = { path = "../rulia-fmt" }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "time"] }
tower-lsp = "0.20"
tree-sitter = "0.22.6"
tree-sitter-rulia = { path = "../../tools/tree-sitter-rulia" }
