[package]
name = "rulia-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for Rulia"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rulia = { path = "../rulia" }
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["rng-getrandom"] }
